k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marca-api
  labels:
    app.kubernetes.io/name: marca-api
spec:
  selector:
    app.kubernetes.io/name: marca-api
  ports:
    - name: http
      port: 80
      targetPort: http
