k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marca-mysql
  labels:
    app.kubernetes.io/name: marca-mysql
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: marca-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
