k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: marca-web
  namespace: inregistrare-marca
  labels:
    app.kubernetes.io/name: marca-web
spec:
  selector:
    app.kubernetes.io/name: marca-web
  ports:
    - name: http
      port: 80
      targetPort: http
