k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inregistrare-marca
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: inregistrare-marca.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marca-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marca-web
                port:
                  name: http
    - host: www.inregistrare-marca.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: marca-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marca-web
                port:
                  name: http
  tls:
    - hosts:
        - inregistrare-marca.com
        - www.inregistrare-marca.com
      secretName: inregistrare-marca-tls
